fix(android): prevent relay pairing crashes